# cabl_mk1_stephan

./: CMakeLists.txt  gattlib_0.2-dev_armhf.deb
examples/: CMakeLists.txt
examples/colordisplay/: ColorDisplay.cpp
examples/euklid/: Euklid.cpp  Euklid.h  _euklid.cpp  aduino Mashine.ino  main.cpp  my_notes
modules/nanomsgxx/: CMakeLists.txt
modules/nanomsgxx/test/: test_timeout.cpp
modules/unmidify/: .travis.yml  CMakeLists.txt  README.md
modules/unmidify/cmake-modules/: sl-compiler.cmake  sl-ext-libs.cmake  sl-functions.cmake
modules/unmidify/include/: unmidify.hpp
modules/unmidify/support/doxygen/: doxy-boot.js
modules/unmidify/test/: CMakeLists.txt  unmidify.cpp
src/comm/drivers/LibUSB/: DeviceHandleLibUSB.cpp  DriverLibUSB.cpp  DriverLibUSB.h
