
        ##########    Copyright (C) 2015 Vincenzo Pacella
        ##      ##    Distributed under MIT license, see file LICENSE
        ##      ##    or <http://opensource.org/licenses/MIT>
        ##      ##
##########      ############################################################# shaduzlabs.com #######

# ------------------------------------------------------------------------------------------------ #
#  Example projects                                                                                #
# ------------------------------------------------------------------------------------------------ #
#pragma GCC diagnostic ignored "-Wno-unused-local-typedefs"

# Euklid - Euclidean sequencer ------------------------------------------------------------------- #
add_subdirectory(device-test DeviceTest)
add_subdirectory(euklid Euklid)
add_subdirectory(colordisplay ColorDisplay)
